FIX: games/words issues with dark mode

--- a/public/games/words/style.css
+++ b/public/games/words/style.css
@@ -48,6 +48,7 @@ main{
     border-radius: .5rem;
     box-shadow: 0 0 3px #000a;
     background-color: var(--clr-neutral-900);
+    color: var(--clr-neutral-100);
 
     position-anchor: --options-btn;
 }
